--- a/pages/net/sms_OutBox.html
+++ b/pages/net/sms_OutBox.html
@@ -54,17 +54,17 @@
 //              return '<span style="vertical-align: middle">' + value.vCssColor + '</span><span class="brand-color-css" style="background-color: ' + value.vCssColor +';"></span>';
 //          }
 //      ,sort: false}
-        ,{field: 'V_MSG', width:150, title: '短信内容', sort: false}
+        ,{field: 'V_MSG', width:1000, title: '短信内容', sort: false}
         ,{field: 'D_SENDTIME', width:150, title: '发送时间', sort: false}
         ,{field: 'N_COMPORT', width:100, title: '端口号', sort: false}
         ,{field: 'N_REPORT', width:200, title: '报告编号', sort: false}
         ,{field: 'V_CONNETTYPE', width:200, title: '连接方式', sort: false}
-        ,{field: 'V1', width:200, title: '连接方式', sort: false}
-        ,{field: 'V2', width:200, title: '连接方式', sort: false}
-        ,{field: 'V3', width:200, title: '连接方式', sort: false}
-        ,{field: 'V4', width:200, title: '连接方式', sort: false}
-        ,{field: 'V5', width:200, title: '连接方式', sort: false}
-        ,{field: 'N_CREATOR', width:200, title: '创建者', sort: false}
+        ,{field: 'V1', width:200, title: '备用字段1', sort: false}
+        ,{field: 'V2', width:200, title: '备用字段2', sort: false}
+        ,{field: 'V3', width:200, title: '备用字段3', sort: false}
+        ,{field: 'V4', width:200, title: '备用字段4', sort: false}
+        ,{field: 'V5', width:200, title: '备用字段5', sort: false}
+        ,{field: 'v_Creator_Name', width:200, title: '创建者', sort: false}
         ,{field: 'D_CREATE', width:200, title: '创建时间', sort: false}
         ,{field: 'D_UPDATE', width:200, title: '更新时间', sort: false}        
         ,{fixed: 'right', title: '操作', toolbar: '#barDemo', width: 150}
@@ -74,18 +74,18 @@
         layer_table_column_obj:json,
         ajax_url:"/SPRING-AUDI-NET/sms_outbox/GetSMS_OutBoxlist",
         ajax_json_data:{},
-        dom_table_id:"brand",
+        dom_table_id:"sms_OutBox",
         dom_bar_id:"toolbarDemo",
         callback:function (res, curr, count) {
         }
 
     }
     initPageTableData(jsonTable);
-    table.on('tool(brand)', function (obj) {
+    table.on('tool(sms_OutBox)', function (obj) {
         var data = obj.data;
         if (obj.event === 'del') {
             layer.confirm('您确定要删除该条数据？', function (index) {
-                callAjax("/SPRING-AUDI-NET/brand/remove", {id:data.id}, function (jsonData,CALL_URL_OK) {
+                callAjax("/SPRING-AUDI-NET/sms_OutBox/remove", {id:data.id}, function (jsonData,CALL_URL_OK) {
                     if(CALL_URL_OK==1&&jsonData.code=="S"){
                         dmsalert("删除成功","S");
                         obj.del();
@@ -97,11 +97,11 @@
 
             });
         }else if (obj.event === 'edit') {
-            WindowsShow('更改品牌数据','brand_edit.html?id='+data.id,'400','470');
+            WindowsShow('更改品牌数据','sms_OutBox_edit.html?id='+data.id,'400','470');
         }
     });
     function addBrandItem() {
-        WindowsShow('新增竞争品牌','brand_add.html','400','370');
+        WindowsShow('新增竞争品牌','sms_OutBox_add.html','400','370');
     }
 </script>
 	
